# cotea

./: .gitignore  README.md  ansible_execution_sync.py  arguments_maker.py  runner.py  setup.cfg
.github/workflows/: cotea_testing_workflow.yaml
contributing/: contr_inv  contr_pb.yaml  contributing.md  cotea_ansible_run.py
docker/: docker-compose.yaml  docker.md
docker/ansible_host_container/: Dockerfile
docker/ansible_host_container/src/: add_key.sh  anshostkey.pub
docker/cotea_container/: Dockerfile
docker/cotea_container/src/: configure_ssh.sh  cotea_run.py  id_rsa  inv  main.yaml
docs/: cotea_docs.md  interactive_mode.md
src/: arguments_maker.py  cotea_ansible_error_case.py  cotea_config.ini  cotea_internal_error_case.py  cotea_ok_case.py  cotea_test_utils.py  runner.py
src/cotea/: ansible_execution_sync.py  ansible_execution_tree.py  consts.py  cotea_config.py  debug_utils.py  progress_bar.py  runner.py  task_result.py  utils.py
src/cotea/wrappers/: ansi_breakpoint.py  get_next_task_wrapper.py  pbcli_run_wrapper.py  (+5 more)
src/cotea_run_files/: inv
src/test/: test_ansible_error.py  test_internal_error.py  test_ok.py  utils.py
src/wrappers/: get_batch_len_wrapper.py  get_batches_wrapper.py  get_next_task_wrapper.py  pbcli_run_wrapper.py  play_prereqs_wrapper.py  strategy_run_wrapper.py  tqm_run_wrapper.py  wait_pending_wrapper.py  wrapper_base.py
wrappers/: get_batch_len_wrapper.py  get_batches_wrapper.py  get_next_task_wrapper.py  pbcli_run_wrapper.py  play_prereqs_wrapper.py  strategy_run_wrapper.py  tqm_run_wrapper.py  wait_pending_wrapper.py
(+6 files in other folders)
