[metadata]
name = cotea
version = 1.3.13
author = David Badalyan
author_email = dbadalyan@ispras.ru
description = Tool that provides Python API to run Ansible programmatically.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ispras/cotea
project_urls =
    Bug Tracker = https://github.com/ispras/cotea/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

